--- a/aboly.html
+++ b/aboly.html
@@ -569,10 +569,10 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#1.3">1.3</a></div>
 <div class="lybloboriginaltext"><p>子曰：“巧言令色，鲜矣仁。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">巧言</span>：虚伪欺诈的话。<a id="qiao3"></a><span class="lyterm">巧</span>：技艺高超精致，巧妙，引申为（言辞）花哨伪饰，（手段）奸诈不正当。<span class="lyexample"><span>【例】</span><span>成语“花言巧语”、“巧取豪夺”。</span></span></p></li>
+<li><p><span class="lyterm">巧言</span>：虚伪欺诈的话。<a id="qiao3"></a><span class="lyterm">巧</span>：技艺高超精致，巧妙，引申为（言辞）花哨伪饰，（手段）奸诈险恶。<span class="lyexample"><span>【例】</span><span>成语“花言巧语”、“巧取豪夺”。</span></span></p></li>
 <li>
 <p><span class="lyterm">令色</span>：和气喜悦的表情，这里指满脸堆笑、恭维讨好的态度。<a id="ling4"></a><span class="lyterm">令</span>：美好的。<span class="lyexample"><span>【例】</span><span>《世说新语·自新·一》：<span class="lyq">人患志之不立，亦何忧令名不彰邪？</span>（<a id="ye2"></a>邪（<span class="lypinyin">yé</span>）：表示疑问、反问、感叹的语气词，相当于呢，啊。）</span></span></p>
-<p>《论语》4次谈到巧言，3次与令色并列 <a href="#5.25" class="lyref">5.25</a> <a href="#15.27" class="lyref">15.27</a> <a href="#17.17" class="lyref">17.17</a> ，都是坚决否定的态度，可见孔子对于<a href="#ning4">佞人</a>的深切反感。<span class="lyseealso"><span>【参】</span><span><a href="#5.10" class="lyref">5.10</a> <a href="#13.27" class="lyref">13.27</a> <a href="#14.27" class="lyref">14.27</a> </span></span></p>
+<p>《论语》4次谈到巧言 <a href="#5.25" class="lyref">5.25</a> <a href="#15.27" class="lyref">15.27</a> <a href="#17.17" class="lyref">17.17</a> ，3次与令色并列，都是坚决否定的态度，可见孔子对于<a href="#ning4">佞人</a>的深切反感。<span class="lyseealso"><span>【参】</span><span><a href="#5.10" class="lyref">5.10</a> <a href="#13.27" class="lyref">13.27</a> <a href="#14.27" class="lyref">14.27</a> </span></span></p>
 </li>
 </ul></div>
 </div>
@@ -1617,7 +1617,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize">
-<li><p><a id="yiyiguanzhi"></a><span class="lyterm">一以贯之</span>：“以一贯之”的倒装，一个基本道理贯通它的全部内容。古注常用钱绳串铜钱来打比方，用现代的话说，就是既有体系规模，又有中心思想。</p></li>
+<li><p><a id="yiyiguanzhi"></a><span class="lyterm">一以贯之</span>：“以一贯之”的倒装，一个基本道理贯通它的全部内容。古注常比作绳串铜钱，用现代的话说，就是既有体系规模，又有中心思想。</p></li>
 <li><p><span class="lyterm">唯</span>：表示同意的答应声，相当于是的，yes。参见<a href="#nuo4">诺</a>。<span class="lyexample"><span>【例】</span><span>成语“唯唯诺诺”指人一味应声附和，而不发表自己的意见。</span></span></p></li>
 <li>
 <p><a id="menren"></a><span class="lyterm">门人</span>：弟子，学生。古代以登师<span class="lyterm">门</span>求学为礼。<span class="lyseealso"><span>【参】</span><span>《礼记·曲礼上》：<span class="lyq">礼闻来学，不闻往教。</span>孔颖达疏：<span class="lyq">凡学之法，当就其师，处<a href="#nanmian">北面</a>伏<a href="#ying1">膺</a>。……不可以屈师亲来就己。</span>《仪礼·士相见礼》唐代贾公彦疏：<span class="lyq">学生事师，虽无<a href="#wufu">服</a>，有父兄之恩，故称弟子也。</span></span></span></p>
@@ -3054,7 +3054,10 @@ img.characterimg {
 <p><a id="you4"></a><span class="lyterm">诱</span>：诱导，以巧妙有吸引力的方式引导。成语“循循善诱”指老师善于引导学生有效学习。</p>
 </li>
 <li><p><span class="lyterm">所立卓（<span class="lypinyin">zhuó</span>）尔</span>：矗立在前方很高大的形象。这是指孔子学识博大，人格宏伟，虽已尽心竭力去学，仍会感到高不可攀，遥不可及。<a id="zhuo2"></a><span class="lyterm">卓</span>：高而直立。</p></li>
-<li><p><a id="mo4"></a><span class="lyterm">末</span>：通“莫”，代词，无所，没有什么。<span class="lyexample"><span>【例】</span><span><a href="#15.16" class="lyref">15.16</a> <span class="lyq">吾末如之何也已矣。</span></span></span></p></li>
+<li>
+<p><a id="mo4"></a><span class="lyterm">末</span>：通“莫”，代词，无所，没有什么。<span class="lyexample"><span>【例】</span><span><a href="#15.16" class="lyref">15.16</a> <span class="lyq">吾末如之何也已矣。</span></span></span></p>
+<p>思考：同样是仰慕孔子之道并自叹力不从心，颜回的<span class="lyq">欲罢不能。既竭吾才</span>，和 <a href="#6.12" class="lyref">6.12</a>  冉求的<span class="lyq">力不足也</span>，在表达效果上有什么差别？实际行动方面呢？</p>
+</li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>《庄子·田子方》也有一段生动描写：<span class="lyq">颜渊问于仲尼曰：“夫子步亦步，夫子趋亦趋，夫子驰亦驰；夫子奔逸绝尘，而回瞠若乎后矣！”</span>（夫子步亦步：夫子步，回亦步。瞠（<span class="lypinyin">chēng</span>）：睁大眼直看。若：然。）然后借孔子之口，给出了道家式的超脱回答：万物不断生灭变化，我也如此啊，你追逐我的陈迹以求道，不是很可悲吗？<span class="lyq">虽忘乎故吾，吾有不忘者存。</span></span></span></p>
 </div>
@@ -3992,7 +3995,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">崇德辨惑</span>：增进道德，理清迷惑。<span class="lyterm">崇</span>：高，高大，用作动词。</p></li>
 <li><p><span class="lyterm"><a href="#xi3">徙</a>义</span>：即徙于义，改过从善。</p></li>
-<li><p><span class="lyterm">诚不以富，亦只以异</span>：《诗经·小雅·我行其野》的结尾句，这是一首弃妇诗，引在这里很突兀，多被认为是<a href="#jiandu">编辑失误</a>。这两句在原诗中的意思是：真不因为人家比我富，也只怨你变心不算数。<span class="lyseealso"><span>【参】</span><span>《诗集传》：<span class="lyq">此见诗人<a href="#ze2a">责</a>人忠厚之意。</span></span></span></p></li>
+<li><p><span class="lyterm">诚不以富，亦只以异</span>：《诗经·小雅·我行其野》的结尾句，它是一首弃妇诗，引在这里很突兀，多被认为是<a href="#jiandu">编辑失误</a>。这两句在原诗中的意思是：真不因为人家比我富，也只怨你变心不算数。<span class="lyseealso"><span>【参】</span><span>《诗集传》：<span class="lyq">此见诗人<a href="#ze2a">责</a>人忠厚之意。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="12.11"></a><div class="lyblob">
@@ -4206,7 +4209,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#13.7">13.7</a></div>
 <div class="lybloboriginaltext"><p>子曰：“鲁卫之政，兄弟也。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
-<p><span class="lyterm">鲁卫之政</span>：<span class="lyterm">鲁</span>是<a href="#zhougong">周公旦</a>的封国，<a id="kangshu"></a><span class="lyterm">卫</span>是周公八弟康叔的封国，同为姬姓，东西接壤。<span class="lyseealso"><span>【参】</span><span>《左传·定公六年》：<span class="lyq"><a href="#taisi">大姒</a>之子，唯周公、康叔为相睦也。</span><a id="luzhifengdi"></a>《史记·汉兴以来诸侯王年表》：<span class="lyq">〔周〕封<a href="#lugong">伯禽</a>、康叔于鲁、卫，地各四百里，亲亲之义，褒有德也；<a href="#jiangtaigong">太公</a>于齐，兼五侯地，尊勤劳也。</span></span></span></p>
+<p><span class="lyterm">鲁卫之政</span>：<span class="lyterm">鲁</span>是<a href="#zhougong">周公旦</a>的封国，<a id="kangshu"></a><span class="lyterm">卫</span>是周公的同胞九弟康叔的封国，同为姬姓，东西接壤。康叔是在<a href="#songguo">武庚之乱</a>平定后，与<a href="#biganjiziweizi">微子</a>同时受封的。<span class="lyseealso"><span>【参】</span><span>《左传·定公六年》：<span class="lyq"><a href="#taisi">大姒</a>之子，唯周公、康叔为相睦也。</span><a id="luzhifengdi"></a>《史记·汉兴以来诸侯王年表》：<span class="lyq">〔周〕封<a href="#lugong">伯禽</a>、康叔于鲁、卫，地各四百里，亲亲之义，褒有德也；<a href="#jiangtaigong">太公</a>于齐，兼五侯地，尊勤劳也。</span></span></span></p>
 <p>当时，鲁国的政权由<a href="#sanhuan">三桓</a>把持，卫国则是<a href="#weijun">父子相斗</a>的局面，都让孔子痛心疾首。</p>
 </li></ul></div>
 </div>
@@ -4679,7 +4682,13 @@ img.characterimg {
 <a id="14.22"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.22">14.22</a></div>
 <div class="lybloboriginaltext"><p><a href="#zilu">子路</a>问事君，子曰：“勿欺也，而犯之。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="fan4"></a><span class="lyterm">犯</span>：触犯，冒犯，指直言敢谏。孔子认为信而后谏，即使不得已失礼，也是正当的。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> <a href="#13.18" class="lyref">13.18</a> <a href="#5.21" class="lyref">5.21</a> 。《史记·商君列传》：<span class="lyq">千人之诺诺，不如一士之谔谔。</span>（<a href="#nuo4">诺</a>诺：应承顺服的样子。<a id="e4"></a>谔谔（<span class="lypinyin">è</span>）：据理力争的样子。）《资治通鉴·唐太宗贞观六年》（632年）：<span class="lyq">〔唐太宗曰：〕“征每谏，我不从，我与之言辄不应，何也？”魏征对曰：“臣以为事不可，故谏；若陛下不从而臣应之，则事遂施行，故不敢应。”上曰：“且应而复谏，庸何伤！”对曰：“昔<a href="#shun">舜</a>戒群臣：‘尔无面从，退有后言。’臣心知其非而口应陛下，乃面从也，岂<a href="#houji">稷</a>、<a href="#shangchao">契</a>事舜之意<a href="#ye2">邪</a>！”上大笑曰：“人言魏征举止疏慢，我视之更觉妩媚，正为此耳！”征起，拜谢曰：“陛下开臣使言，故臣得尽其愚；若陛下拒而不受，臣何敢数犯<a href="#yanse">颜色</a>乎！”</span>（庸：何。庸何是同义词连用。后言：背后议论。妩媚：可爱。开：启发。）传统上，欺君之罪属于大逆不道，犯颜直谏则是值得表彰的忠臣之事，“君明则臣直”又是平息君王震怒的顺耳良言。关于这个微妙话题，1994年王怀志、郭政合著的《参谋助手论——为首长服务的艺术》有大量现实性讨论。</span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li>
+<p><a id="fan4"></a><span class="lyterm">犯</span>：触犯，冒犯，指直言敢谏。孔子认为信而后谏，即使不得已失礼，也是正当的。</p>
+<div class="lyseealso">
+<p><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> <a href="#17.13" class="lyref">17.13</a> 。《史记·商君列传》：<span class="lyq">千人之诺诺，不如一士之谔谔。</span>（<a href="#nuo4">诺</a>诺：应承顺服的样子。<a id="e4"></a>谔谔（<span class="lypinyin">è</span>）：据理力争的样子。）咸丰元年（1851年）曾国藩上疏说：<span class="lyq">古今人情不甚相远，大率戆直者少，缄默者多。……自古之重直臣，非特使彼成名而已，盖将借其药石，以折人主骄侈之萌，培其风骨，养其威棱，以备有事折冲之用，所谓疾风知劲草也。若不取此等，则必专取一种谐媚软熟之人，料其断不敢出一言以逆耳而拂心，而稍有锋芒者，必尽挫其劲节而销铄其刚气。一旦有事，则满庭皆疲苶沓泄，相与袖手，一筹莫展而后已。</span>（戆（<span class="lypinyin">zhuàng</span>）：迂鲁刚直。苶（<span class="lypinyin">nié</span>）：疲倦。沓：懈怠。泄：通“媟”，轻慢。）《资治通鉴·唐太宗贞观六年》（632年）载：<span class="lyq">〔唐太宗曰：〕“征每谏，我不从，我与之言辄不应，何也？”魏征对曰：“臣以为事不可，故谏；若陛下不从而臣应之，则事遂施行，故不敢应。”上曰：“且应而复谏，庸何伤！”对曰：“昔<a href="#shun">舜</a>戒群臣：‘尔无面从，退有后言。’臣心知其非而口应陛下，乃面从也，岂<a href="#houji">稷</a>、<a href="#shangchao">契</a>事舜之意<a href="#ye2">邪</a>！”上大笑曰：“人言魏征举止疏慢，我视之更觉妩媚，正为此耳！”征起，拜谢曰：“陛下开臣使言，故臣得尽其愚；若陛下拒而不受，臣何敢数犯<a href="#yanse">颜色</a>乎！”</span>（庸：何。庸何是同义词连用。后言：背后议论。妩媚：可爱。开：启发。）</span></p>
+<p>传统上，欺君之罪属于大逆不道，犯颜直谏则是值得表彰的忠臣之事，“君明则臣直”又是平息君王震怒的顺耳良言。关于这个微妙话题，1994年王怀志、郭政合著的《参谋助手论——为首长服务的艺术》有大量现实性讨论。</p>
+</div>
+</li></ul></div>
 </div>
 <a id="14.23"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#14.23">14.23</a></div>
@@ -5244,7 +5253,10 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">颛臾</span>（<span class="lypinyin">zhuān yú</span>）：鲁国境内的一个<a href="#fuyong">附庸国</a>，位于季氏的封邑<a href="#feiyi">费邑</a>西北约80里，相传为<a href="#sanhuang">伏羲</a>的后代所建。周初受<a href="#chengwang">成王</a>封，负责主持祭祀蒙山（位于鲁国境内偏东，与颛臾相邻），即为<span class="lyterm">东蒙主</span>。本章的情节应发生在孔子<a href="#jikangzi">返鲁</a>之后。这次军事活动未见于现存史料，不知是不是孔子的劝阻起了效果。</p></li>
 <li><p><a id="youshi"></a><span class="lyterm">有事</span>：有国家大事，这里指发动战争。<a id="shi4d"></a><span class="lyterm">事</span>：特指天子、诸侯层面的祭祀、会盟、战争等重大举措，action。<span class="lyexample"><span>【例】</span><span>《谷梁传·隐公十一年》：<span class="lyq">天子无事，诸侯相朝，正也。</span>东晋范宁注：<span class="lyq">事谓巡守、崩葬、兵<a href="#sheng4a">革</a>之事。</span></span></span></p></li>
-<li><p><span class="lyterm"><a href="#wunai">无乃</a>尔<a href="#shi4">是</a>过与？</span>：难道不该怪罪你吗？当时冉求和子路都是季氏家臣，冉求曾为之<a href="#11.17">聚敛而附益</a>，应该已很受重用了。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">夫子所以深罪之，为其瘠鲁以肥<a href="#sanhuan">三家</a>也。</span></span></span></p></li>
+<li>
+<p><span class="lyterm"><a href="#wunai">无乃</a>尔<a href="#shi4">是</a>过与？</span>：难道不该怪罪你吗？当时冉求和子路都是季氏家臣，冉求曾为之<a href="#11.17">聚敛而附益</a>，应该已很受重用了。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">夫子所以深罪之，为其瘠鲁以肥<a href="#sanhuan">三家</a>也。</span></span></span></p>
+<p>冉求、子路同以政事闻名 <a href="#11.3" class="lyref">11.3</a> ，他们一起出现的章还有 <a href="#5.8" class="lyref">5.8</a> <a href="#6.8" class="lyref">6.8</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.24" class="lyref">11.24</a> <a href="#11.26" class="lyref">11.26</a> <a href="#14.12" class="lyref">14.12</a> 。</p>
+</li>
 <li><p><span class="lyterm">夫子</span>：指季氏宗主<a href="#jikangzi">季康子</a>。</p></li>
 <li>
 <p><span class="lyterm">周任有言曰：“陈力就列，不能者止。”</span><span class="lyterm">周任</span>：古注说他是“古之良史”，但事迹不详。<span class="lyseealso"><span>【参】</span><span>《左传》有2处引用了周任的话。隐公六年：<span class="lyq">为国家者，见恶如农夫之务去草焉，芟夷蕰崇之，绝其本根，勿使能殖，则善者信矣。</span>（芟（<span class="lypinyin">shān</span>）：除草。<a id="yi2"></a>夷：平，铲除。蕰（<span class="lypinyin">yùn</span>）：通“蕴”，积聚。）昭公五年：<span class="lyq">为政者不赏私劳，不罚私怨。</span></span></span></p>
@@ -5527,7 +5539,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#17.10">17.10</a></div>
 <div class="lybloboriginaltext"><p>子谓<a href="#li">伯鱼</a>曰：“女为《周南》、《召南》矣乎？人而不为《周南》、《召南》，其犹正墙面而立也与！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm"><a href="#wei2b">为</a></span>（<span class="lypinyin">wéi</span>）：指学。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> </span></span></p></li>
+<li><p><span class="lyterm"><a href="#wei2b">为</a></span>（<span class="lypinyin">wéi</span>）：指学。<span class="lyseealso"><span>【参】</span><span><a href="#16.13" class="lyref">16.13</a> <span class="lyq">学《诗》乎？……不学《诗》，无以言。</span></span></span></p></li>
 <li><p><a id="zhounan"></a><span class="lyterm">《周南》</span>、<span class="lyterm">《召（<span class="lypinyin">shào</span>）南》</span>是《诗经》开头的两章，共25首。在《国风》里，只有这两章不对应于特定的国家，而是<a href="#zhougong">周</a>、<a href="#shaogong">召</a>二公分陕而治的南国地区。<span class="lyseealso"><span>【参】</span><span>唐初陆德明《经典释文·毛诗音义》：<span class="lyq">南者，言周之德化自<a href="#taibo">岐</a>阳而先<a href="#pi1">被</a>南方。</span>（阳：山的南面。）<a href="#jizhaguanyue">季札</a>在鲁国观周乐时，对《周南》、《召南》的评价是：<span class="lyq">美哉！始基之矣，犹未也。然勤而不怨矣。</span>（基：有基础。未：未完善。）刘宝楠《论语正义》认为：<span class="lyq">二《南》皆言夫妇之道，为<a href="#wangdao">王化</a>之始。故君子反身必先修诸己，而后可“刑于寡妻，至于兄弟，以御于家邦”。</span>（所引句出自《诗经·大雅·思齐》，原诗是赞颂<a href="#wen">文王</a>之德。刑：通“型”，示范。寡：王侯的谦称，此指文王。）</span></span></p></li>
 <li><p><span class="lyterm">正墙面而立</span>：面对着墙壁贴近站着。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">即其至近之地，而一物无所见，一步不可行。</span>这个比喻可能是周朝的习惯说法，如《尚书·周书·周官》（伪）中，<a href="#chengwang">周成王</a>告诫百官：<span class="lyq">不学墙面，<a href="#li4">莅</a>事惟烦。</span>西汉孔安国注：<span class="lyq">人而不学，其犹正墙面而立，临政事必烦。</span>《宋史·王显传》载，宋太祖曾对时任枢密使的王显说：<span class="lyq">卿世家本儒，少遭乱失学，今<a href="#dian3">典</a>朕机务，无暇博览群书，能熟读《军戒》三篇，亦可免于面墙矣。</span></span></span></p></li>
 </ul></div>
@@ -5556,8 +5568,8 @@ img.characterimg {
 <div class="lyseealso">
 <p><span>【参】</span><span><a href="#13.24" class="lyref">13.24</a> 。《孟子·尽心下》，孟子向弟子万章痛陈乡原（即乡愿）之害：</span></p>
 <div class="lyquotepara">
-<p>（孟子）曰：“……孔子曰：‘过我门而不入我室，我不憾焉者，其乡原乎！乡原，德之<a href="#zei2">贼</a>也。’”</p>
-<p>（万章）曰：“何如斯可谓之乡原矣？”</p>
+<p>〔孟子〕曰：“……孔子曰：‘过我门而不入我室，我不憾焉者，其乡原乎！乡原，德之<a href="#zei2">贼</a>也。’”</p>
+<p>〔万章〕曰：“何如斯可谓之乡原矣？”</p>
 <p>曰：“……阉然媚于世也者，是乡原也。”</p>
 <p>万子曰：“一乡皆称原人焉，无所往而不为原人，孔子以为德之贼，何哉？”</p>
 <p>曰：“非之无举也，刺之无刺也，同乎流俗，合乎污世，居之似忠信，行之似廉洁，众皆悦之，自以为是，而不可与入尧舜之道，故曰‘德之贼’也。孔子曰：恶似而非者；……恶乡原，恐其乱德也。”</p>
@@ -5725,7 +5737,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>微子去之，箕子为之奴，比干谏而死。孔子曰：“殷有三仁焉。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize"><li>
 <p><a id="biganjiziweizi"></a><a href="#shangchao">商朝</a>末代君王<a href="#zhou">纣</a>荒淫无道，天下离心。他的大哥<span class="lyterm">微子</span>（名启，庶母所生）屡谏无果，离朝隐居。<a id="bigan"></a>叔父<span class="lyterm">比干</span>（<span class="lypinyin">gān</span>）拼死强谏，<span class="lyq">纣怒曰：“吾闻圣人心有七窍”</span>，剖视其心。另一位叔父<span class="lyterm">箕子</span>唯恐社稷不保，殷祀断绝，装疯自污以存身，也被纣王囚禁。</p>
-<p><a href="#zhouchao">周</a>灭商后，微子被<a href="#wu">武王</a>复职，后来又被<a href="#chengwang">成王</a>封于<a href="#songguo">宋</a>，以续殷祀。箕子被武王封于朝鲜（今辽东、北朝鲜一带），不必向周朝称臣。相传箕子是朝鲜开化的始祖，建立了“箕子朝鲜”政权（前12世纪—前194年）。事见《史记·殷本纪》、《史记·宋微子世家》。据当地县志载，河南省<a href="#zhaoge">淇县</a>曾有“三仁庙”，毁于太平天国。河南省卫辉市存有始建于北魏的比干庙。</p>
+<p><a href="#zhouchao">周</a>灭商后，微子被<a href="#wu">武王</a>复职，<a href="#songguo">武庚之乱</a>后又被<a href="#chengwang">成王</a>封于宋，以续殷祀。箕子被武王封于朝鲜（今辽东、北朝鲜一带），不必向周朝称臣。相传箕子是朝鲜开化的始祖，建立了“箕子朝鲜”政权（前12世纪—前194年）。事见《史记·殷本纪》、《史记·宋微子世家》。据当地县志载，河南省<a href="#zhaoge">淇县</a>曾有“三仁庙”，毁于太平天国。河南省卫辉市存有始建于北魏的比干庙。</p>
 </li></ul></div>
 </div>
 <a id="18.2"></a><div class="lyblob">
