--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@ window.onload = function() {
 </div>
 
 <map name="abolycovermap" id="abolycovermap">
-<area shape="circle" coords="308,451,22" href="/aboly#topiczheng4" alt="政" title="政">
-<area shape="circle" coords="365,451,18" href="/aboly#topiczhong1" alt="忠" title="忠">
-<area shape="circle" coords="164,504,18" href="/aboly#topiczhi4a" alt="智" title="智">
-<area shape="circle" coords="361,351,18" href="/aboly#topicshu4" alt="恕" title="恕">
-<area shape="circle" coords="187,451,22" href="/aboly#topicxue2" alt="学" title="学">
-<area shape="circle" coords="247,390,39" href="/aboly#topicjunzi" alt="君子" title="君子">
-<area shape="circle" coords="308,329,22" href="/aboly#topicli3" alt="礼" title="礼">
-<area shape="circle" coords="348,491,18" href="/aboly#topicyongren" alt="贤" title="贤">
-<area shape="circle" coords="185,329,22" href="/aboly#topicren2" alt="仁" title="仁">
-<area shape="circle" coords="330,276,18" href="/aboly#topicqian1" alt="谦" title="谦">
-<area shape="circle" coords="145,369,18" href="/aboly#topiczhi4" alt="志" title="志">
-<area shape="circle" coords="133,472,18" href="/aboly#topicyi4a" alt="艺" title="艺">
-<area shape="circle" coords="348,410,18" href="/aboly#topicde2" alt="德" title="德">
-<area shape="circle" coords="308,508,18" href="/aboly#topichui4" alt="惠" title="惠">
-<area shape="circle" coords="186,272,18" href="/aboly#topicyi4" alt="义" title="义">
-<area shape="circle" coords="128,329,18" href="/aboly#topicyou3" alt="友" title="友">
-<area shape="circle" coords="227,288,18" href="/aboly#topicxiao4" alt="孝" title="孝">
-<area shape="circle" coords="267,491,18" href="/aboly#topiclian2" alt="廉" title="廉">
-<area shape="circle" coords="286,276,18" href="/aboly#topicjing4" alt="敬" title="敬">
-<area shape="circle" coords="133,429,18" href="/aboly#topicwen2" alt="文" title="文">
-<area shape="circle" coords="145,288,18" href="/aboly#topicxin4" alt="信" title="信">
-<area shape="circle" coords="208,504,18" href="/aboly#topicheng2" alt="恒" title="恒">
-<area shape="circle" coords="360,307,18" href="/aboly#topicwen1" alt="温" title="温">
-<area shape="default" href="/aboly" alt="《一瓶论语》" title="《一瓶论语》">
+<area shape="circle" coords="373,480,30" href="aboly#topicxiao4" alt="孝" title="孝">
+<area shape="circle" coords="508,843,29" href="aboly#topichui4" alt="惠" title="惠">
+<area shape="circle" coords="544,460,29" href="aboly#topicqian1" alt="谦" title="谦">
+<area shape="circle" coords="212,547,29" href="aboly#topicyou3" alt="友" title="友">
+<area shape="circle" coords="602,748,29" href="aboly#topiczhong1" alt="忠" title="忠">
+<area shape="circle" coords="270,835,29" href="aboly#topiczhi4a" alt="智" title="智">
+<area shape="circle" coords="307,547,36" href="aboly#topicren2" alt="仁" title="仁">
+<area shape="circle" coords="306,452,29" href="aboly#topicyi4" alt="义" title="义">
+<area shape="circle" coords="595,583,29" href="aboly#topicchi3" alt="耻" title="耻">
+<area shape="circle" coords="343,835,29" href="aboly#topiczhi4" alt="志" title="志">
+<area shape="circle" coords="441,815,29" href="aboly#topiclian2" alt="廉" title="廉">
+<area shape="circle" coords="508,748,36" href="aboly#topiczheng4" alt="政" title="政">
+<area shape="circle" coords="471,459,29" href="aboly#topicjing4" alt="敬" title="敬">
+<area shape="circle" coords="219,784,29" href="aboly#topicyinyue" alt="乐" title="乐">
+<area shape="circle" coords="574,815,29" href="aboly#topicyongren" alt="贤" title="贤">
+<area shape="circle" coords="306,748,37" href="aboly#topicxue2" alt="学" title="学">
+<area shape="circle" coords="508,547,37" href="aboly#topicli3" alt="礼" title="礼">
+<area shape="circle" coords="595,511,29" href="aboly#topicwen1" alt="温" title="温">
+<area shape="circle" coords="220,712,29" href="aboly#topicwen2" alt="文" title="文">
+<area shape="circle" coords="240,613,30" href="aboly#topicshu4" alt="恕" title="恕">
+<area shape="circle" coords="574,681,30" href="aboly#topicde2" alt="德" title="德">
+<area shape="circle" coords="240,480,29" href="aboly#topicxin4" alt="信" title="信">
+<area shape="circle" coords="407,648,64" href="aboly#topicjunzi" alt="君子" title="君子">
+<area shape="default" href="aboly" alt="《一瓶论语》" title="《一瓶论语》">
 </map>
