--- a/aboly.html
+++ b/aboly.html
@@ -741,7 +741,7 @@ img.characterimg {
 <li><p><span class="lyterm">小大由之</span>：（无论）大事小事，（都）遵循这个原则。</p></li>
 <li>
 <p><span class="lyterm">有所不行：知和而和，不以礼节之，亦不可行也</span>。<span class="lyterm">不行</span>：行不通，不起作用。<span class="lyexample"><span>【例】</span><span><a href="#12.6" class="lyref">12.6</a> <span class="lyq">浸润之谮、肤受之愬，不行焉，可谓明也已矣。</span></span></span></p>
-<p><span class="lyterm">知和而和</span>：只知道“和”好（，没有充分理解），而硬追求“和”。</p>
+<p><span class="lyterm">知和而和</span>：只知道“和”好，（没有充分理解，）而硬追求“和”。</p>
 <p><a id="jie2a"></a><span class="lyterm">节</span>：动词，约束，节制。</p>
 <p><a id="yi4d"></a><span class="lyterm">亦</span>：用于判断或推测之前的副词，表示让步或转折，相当于也就，也将。<span class="lyexample"><span>【例】</span><span><a href="#6.27" class="lyref">6.27</a> <span class="lyq">君子博学于文，约之以礼，亦可以弗畔矣夫。</span><a href="#7.12" class="lyref">7.12</a> <span class="lyq">富而可求也，虽执鞭之士，吾亦为之。</span></span></span></p>
 </li>
@@ -3498,8 +3498,9 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">无所归</span>：没有归宿，指没有亲属等直接责任人为其料理丧事。可以比较 <a href="#9.12" class="lyref">9.12</a>  的<a href="#siyudaolu">死于道路</a>。</p></li>
 <li>
-<p><span class="lyterm">于我殡</span>（<span class="lypinyin">bìn</span>）：由我负责丧葬事宜。<span class="lyterm">殡</span>：死者入殓后停柩待葬。<a id="yu2e"></a><span class="lyterm">于</span>：表示动作的来源，由，自，从。<span class="lyexample"><span>【例】</span><span>成语“青出于蓝”。</span></span><a id="tongcaizhiyi"></a><span class="lyseealso"><span>【参】</span><span>《白虎通·文质》：<span class="lyq">朋友之际，五常之道，有通财之义，振穷救急之意，中心好之，欲饮食之。</span></span></span></p>
-<p>还可以比较<span class="lyterm">于我</span>和英文口语中表达“我来出钱”的on me，on表示依靠，基于。<span class="lyexample"><span>【例】</span><span><em>Friends</em>第5季第24集，<em>The One in Vegas</em>: <span class="lyqe">They really overcharge you for that stuff. But who cares? Because it's all on me!</span></span></span></p>
+<p><span class="lyterm">于我殡</span>（<span class="lypinyin">bìn</span>）：由我负责丧葬事宜。<span class="lyterm">殡</span>：死者入殓后停柩待葬。</p>
+<p><a id="yu2e"></a><span class="lyterm">于</span>：表示动作的来源，由，自，从。<span class="lyexample"><span>【例】</span><span>成语“青出于蓝”。</span></span>还可以比较<span class="lyterm">于我</span>和英文口语表达“由我出钱”的on me。<span class="lyexample"><span>【例】</span><span><em>Friends</em>第5季第24集，<em>The One in Vegas</em>: <span class="lyqe">They really overcharge you for that stuff. But who cares? Because it's all on me!</span></span></span></p>
+<p><a id="tongcaizhiyi"></a><span class="lyseealso"><span>【参】</span><span>《白虎通·文质》：<span class="lyq">朋友之际，五常之道，有通财之义，振穷救急之意，中心好之，欲饮食之。</span></span></span></p>
 </li>
 </ul></div>
 </div>
@@ -4089,12 +4090,12 @@ img.characterimg {
 <p>子曰：“善哉问！先事后得，非崇德与？攻其恶，无攻人之恶，非修慝与？一朝之忿，忘其身，以及其亲，非惑与？”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="te2"></a><span class="lyterm">修慝</span>（<span class="lypinyin">tè</span>）：消除恶念。<span class="lyterm">修</span>：修除，整治去除。<a id="te4"></a><span class="lyterm">慝</span>：恶。<span class="lyseealso"><span>【参】</span><span><a href="#12.10" class="lyref">12.10</a> </span></span></p></li>
-<li><p><a id="qi2"></a><span class="lyterm">攻其恶</span>里的<span class="lyterm">其</span>指自己，与后面的<span class="lyterm">人</span>相对。</p></li>
+<li><p><a id="te2"></a><span class="lyterm">修慝</span>（<span class="lypinyin">tè</span>）：消除恶念。<span class="lyterm">修</span>：整治去除，修正。<a id="te4"></a><span class="lyterm">慝</span>：恶。按《周礼·夏官司马·环人》郑玄注：<span class="lyq">慝，阴奸也</span>，《论语新解》注为<span class="lyq">恶之匿于心</span>，上下文也是讲个人修养，所以前面译作“恶念”。<span class="lyexample"><span>【例】</span><span>成语“负罪引慝”（指引咎自责，出自《尚书·虞夏书·大禹谟》（伪）。引：承担）。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#12.10" class="lyref">12.10</a> <span class="lyq">子张问崇德辨惑。</span></span></span></p></li>
+<li><p><a id="qi2"></a><span class="lyterm">攻其恶</span>里的<span class="lyterm">其</span>指自己，与后面的<span class="lyterm">人</span>相对。这个用法，就好像抽身于旁观者的角度，说“他自己”。<span class="lyexample"><span>【例】</span><span>成语“以其昏昏，使人昭昭”（出自《孟子·尽心下》）。</span></span></p></li>
 <li><p><a id="fen4a"></a><span class="lyterm">忿</span>：怨恨，恼怒。</p></li>
 <li>
 <p><span class="lyterm">以及</span>：以致于连累到。<span class="lyseealso"><span>【参】</span><span>《孝经·天子》：<span class="lyq">爱亲者，不敢<a href="#wu4">恶</a>于人；敬亲者，不敢<a href="#man4">慢</a>于人。</span></span></span></p>
-<p><span class="lyterm">以</span>：表示（不好的）结果，而非目的。类似地，英语中的to，既可以作为in order to表示目的，也可以作为only to来表示不良或意外的结果。<span class="lyexample"><span>【例】</span><span>《左传·襄公二十四年》：<span class="lyq">象有齿以焚其身，贿也。</span>（焚：通“偾”（<span class="lypinyin">fèn</span>），倒毙。贿：财物。）伊索寓言《生金蛋的鹅》（<a href="https://fablesofaesop.com/the-goose-with-the-golden-eggs.html" class="lyurl" target="_blank"><em>The Goose with the Golden Eggs</em></a>）: <span class="lyqe">As he grew rich he grew greedy; and thinking to get at once all the gold the Goose could give, he killed it and opened it only to find nothing.</span></span></span></p>
+<p><span class="lyterm">以</span>：表示（不好的）结果，而非目的。类似地，英语中to后接动词时，既可以作为in order to表示目的，又可以作为only to来表示不良或意外的结果。<span class="lyexample"><span>【例】</span><span>《左传·襄公二十四年》：<span class="lyq">象有齿以焚其身，贿也。</span>（焚：通“偾”（<span class="lypinyin">fèn</span>），倒毙。贿：财物。）伊索寓言《生金蛋的鹅》（<a href="https://fablesofaesop.com/the-goose-with-the-golden-eggs.html" class="lyurl" target="_blank"><em>The Goose with the Golden Eggs</em></a>）: <span class="lyqe">As he grew rich he grew greedy; and thinking to get at once all the gold the Goose could give, he killed it and opened it only to find nothing.</span></span></span></p>
 </li>
 </ul></div>
 </div>
