Reorganize navbar icons.

--- a/ly.html
+++ b/ly.html
@@ -318,19 +318,18 @@ a:link {
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top lynavbar" role="navigation"><div class="container">
-<div class="navbar-header pull-left">
-<a id="navrandomjump" class="navbar-brand" title="转转"><span class="glyphicon glyphicon-asterisk"></span></a><a href="/ideas" class="navbar-brand" title="留言" target="_blank"><span class="glyphicon glyphicon-comment"></span></a>
-</div>
+<div class="navbar-header pull-left"><ul class="nav pull-left"><li class="dropdown pull-left" title="目录">
+<a id="navoutline" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-list-alt"></span></a><ul id="outlinemenu" class="dropdown-menu lyscrollable-menu"></ul>
+</li></ul></div>
 <div class="navbar-header pull-right"><ul class="nav pull-left">
-<li class="dropdown pull-left" title="目录">
-<a id="navoutline" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-bookmark"></span></a><ul id="outlinemenu" class="dropdown-menu dropdown-menu-right lyscrollable-menu"></ul>
-</li>
+<li class="dropdown pull-left" title="转转"><a id="navrandomjump" class="lynavbar-anchor"><span class="glyphicon glyphicon-random"></span></a></li>
 <li class="dropdown pull-right" title="设置">
 <a id="navsettings" href="#" data-toggle="dropdown" class="dropdown-toggle lynavbar-anchor"><span class="glyphicon glyphicon-menu-hamburger"></span></a><ul class="dropdown-menu lyscrollable-menu">
 <li><a id="toggleblobtags"><span class="glyphicon glyphicon-ok"></span> 显示章号</a></li>
 <li class="nav-divider">
 <li><a href="http://pan.baidu.com/s/1eRp6vMq" target="_blank"><span class="glyphicon glyphicon-download-alt"></span> PDF版</a></li>
 <li><a href="http://www.abolybook.org" target="_blank"><span class="glyphicon glyphicon-home"></span> 主页</a></li>
+<li><a href="/ideas" target="_blank"><span class="glyphicon glyphicon-comment"></span> 留言</a></li>
 <li><a href="/donate" target="_blank"><span class="glyphicon glyphicon-heart"></span> 赞助</a></li>
 </ul>
 </li>
