Minor CSS update.

--- a/aboly.html
+++ b/aboly.html
@@ -207,6 +207,8 @@ img.characterimg {
 
 #navoutline:focus,
 #navoutline:hover,
+#navrandomjump:focus,
+#navrandomjump:hover,
 #navsettings:focus,
 #navsettings:hover {
     color: #5e5e5e;
