--- a/ly.html
+++ b/ly.html
@@ -88,6 +88,8 @@ a:link {
 
 #navoutline:focus,
 #navoutline:hover,
+#navrandomjump:focus,
+#navrandomjump:hover,
 #navsettings:focus,
 #navsettings:hover {
     color: #5e5e5e;
